# beatstore-backend/src/main/java/org/mbozecki/domain/models/BeatMP3Full.java
@@ -22,7 +22,5 @@ public class BeatMP3Full extends PanacheEntityBase {
 
     public String beatid;
 
-    @Lob
-    public byte[] fullbeatmp3;
-
+    public String path;
 }
